@@ -1,3 +1,2 @@
 from zope.i18nmessageid import MessageFactory
-StaticMessageFactory = MessageFactory('plone.portlet.static')
-
+PloneMessageFactory = MessageFactory('plone')
