@@ -3,7 +3,7 @@
      tal:content="structure view/data/text" />
 <dl tal:condition="not:view/data/omit_border"
     tal:attributes="class string:portlet portletStaticText ${view/css_class}"
-    i18n:domain="plone.portlet.static">
+    i18n:domain="plone">
 
     <dt class="portletHeader">
         <span class="portletTopLeft"></span>
